# Online_Reinforcement_Learning_for_Adaptive_Gain_Tuning_in_IBVS

./: README.md  exec.sh  run.sh
docker_ws/: Dockerfile.project  build.sh
ros_ws/src/ibvs_rl/: package.xml  setup.cfg  setup.py
ros_ws/src/ibvs_rl/ibvs_rl/: main.py
ros_ws/src/ibvs_rl/launch/: main.launch.py
ros_ws/src/picknik_accessories/: CMakeLists.txt  package.xml
ros_ws/src/picknik_accessories/descriptions/brackets/mtc_ur_tool_changer/: mtc_ur3510_ur_toolchanger.dae  mtc_ur_tool_changer.urdf.xacro
ros_ws/src/picknik_accessories/descriptions/brackets/ur_realsense_camera_adapter/: picknik_ur5_realsense_camera_adapter_rev2.dae  picknik_ur_camera_adapter.urdf.xacro
ros_ws/src/picknik_accessories/descriptions/sensors/: extrinsic_calibrated_realsense.urdf.xacro  realsense_d415.urdf.xacro  realsense_d435.urdf.xacro  realsense_l515.urdf.xacro
ros_ws/src/picknik_accessories/env-hooks/: picknik_accessories.dsv.in
ros_ws/src/robotiq_description/urdf/: 2f_85.ros2_control.xacro  robotiq_2f_140.xacro  robotiq_2f_140_gripper.urdf.xacro  robotiq_2f_140_macro.urdf.xacro  robotiq_2f_85_gripper.urdf.xacro  robotiq_2f_85_macro.urdf.xacro
ros_ws/src/ur_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ur_servo.yaml
ros_ws/src/ur_moveit_config/launch/: ur_moveit.launch.py
ros_ws/src/ur_moveit_config/srdf/: ur_macro.srdf.xacro
ros_ws/src/ur_simulation_gz/: CMakeLists.txt  package.xml
ros_ws/src/ur_simulation_gz/config/: ur_controllers.yaml
ros_ws/src/ur_simulation_gz/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
ros_ws/src/ur_simulation_gz/test/: test_description.py  test_gz.py
ros_ws/src/ur_simulation_gz/urdf/: ur_attachments_macro.xacro  (+2 more)
(+24 files in other folders)
