<?xml version="1.0"?>
<package format="3">
  <name>picknik_accessories</name>
  <version>6.0.0</version>
  <description>URDFs and geometry for common objects and attachments.</description>
  <maintainer email="joseph.schornak@picknik.ai">Joseph Schornak</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>ur_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
